Use RFC 9457 (Problem Details for HTTP APIs) for error responses
https://www.rfc-editor.org/info/rfc9457
