# tests/app/__snapshots__/test_app/test_openapi_spec.json
@@ -1577,19 +1577,6 @@
         "title": "FileSetting",
         "type": "object"
       },
-      "HTTPValidationError": {
-        "properties": {
-          "detail": {
-            "items": {
-              "$ref": "#/components/schemas/ValidationError"
-            },
-            "title": "Detail",
-            "type": "array"
-          }
-        },
-        "title": "HTTPValidationError",
-        "type": "object"
-      },
       "HiddenSetting": {
         "description": "Hidden setting model.",
         "properties": {
@@ -3862,6 +3849,42 @@
         "title": "PluginTypeOrAnyEnum",
         "type": "string"
       },
+      "Problem": {
+        "properties": {
+          "detail": {
+            "description": "String containing a human-readable explanation specific to this occurrence of the problem",
+            "title": "Detail",
+            "type": "string"
+          },
+          "instance": {
+            "description": "String containing a URI reference that identifies the specific occurrence of the problem",
+            "title": "Instance",
+            "type": "string"
+          },
+          "status": {
+            "description": "Number indicating the HTTP status generated by the origin server",
+            "title": "Status",
+            "type": "integer"
+          },
+          "title": {
+            "description": "String containing a short, human-readable summary of the problem type",
+            "title": "Title",
+            "type": "string"
+          },
+          "type": {
+            "description": "URI reference that identifies the problem type",
+            "title": "Type",
+            "type": "string"
+          }
+        },
+        "required": [
+          "type",
+          "status",
+          "title"
+        ],
+        "title": "Problem",
+        "type": "object"
+      },
       "StringSetting": {
         "description": "String setting model.",
         "properties": {
@@ -4844,6 +4867,7 @@
       "ValidationError": {
         "properties": {
           "ctx": {
+            "additionalProperties": true,
             "title": "Context",
             "type": "object"
           },
@@ -4879,6 +4903,50 @@
           "type"
         ],
         "title": "ValidationError",
+        "type": "object"
+      },
+      "ValidationErrorProblem": {
+        "properties": {
+          "detail": {
+            "description": "String containing a human-readable explanation specific to this occurrence of the problem",
+            "title": "Detail",
+            "type": "string"
+          },
+          "errors": {
+            "description": "Custom extension to the RFC 9457 schema detailing validation errors",
+            "items": {
+              "$ref": "#/components/schemas/ValidationError"
+            },
+            "title": "Errors",
+            "type": "array"
+          },
+          "instance": {
+            "description": "String containing a URI reference that identifies the specific occurrence of the problem",
+            "title": "Instance",
+            "type": "string"
+          },
+          "status": {
+            "description": "Number indicating the HTTP status generated by the origin server",
+            "title": "Status",
+            "type": "integer"
+          },
+          "title": {
+            "description": "String containing a short, human-readable summary of the problem type",
+            "title": "Title",
+            "type": "string"
+          },
+          "type": {
+            "description": "URI reference that identifies the problem type",
+            "title": "Type",
+            "type": "string"
+          }
+        },
+        "required": [
+          "type",
+          "status",
+          "title"
+        ],
+        "title": "ValidationErrorProblem",
         "type": "object"
       },
       "VariantReference": {
@@ -4937,15 +5005,35 @@
             },
             "description": "Successful Response"
           },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
+          },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Get maintainers list",
@@ -4999,15 +5087,35 @@
             },
             "description": "Successful Response"
           },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
+          },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Get top plugin maintainers",
@@ -5061,17 +5169,44 @@
             "description": "Successful Response"
           },
           "404": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
             "description": "Maintainer not found"
+          },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
           },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Get maintainer details",
@@ -5108,15 +5243,35 @@
             },
             "description": "Successful Response"
           },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
+          },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Get plugin index",
@@ -5192,15 +5347,35 @@
             },
             "description": "Successful Response"
           },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
+          },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Get SDK plugins",
@@ -5277,21 +5452,45 @@
             },
             "description": "Successful Response"
           },
-          "400": {
-            "description": "Not a valid plugin type"
-          },
           "404": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
             "description": "Plugin not found"
+          },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
           },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Find a plugin",
@@ -5335,15 +5534,35 @@
             },
             "description": "Successful Response"
           },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
+          },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Hub statistics",
@@ -5393,18 +5612,35 @@
             },
             "description": "Successful Response"
           },
-          "400": {
-            "description": "Not a valid plugin type"
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
           },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Get plugin type index",
@@ -5484,21 +5720,45 @@
             },
             "description": "Successful Response"
           },
-          "400": {
-            "description": "Not a valid plugin type"
-          },
           "404": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
             "description": "Plugin variant not found"
+          },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
           },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Get plugin variant",
@@ -5561,21 +5821,45 @@
             },
             "description": "Successful Response"
           },
-          "400": {
-            "description": "Not a valid plugin type"
-          },
           "404": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
             "description": "Plugin not found"
+          },
+          "405": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Method Not Allowed"
           },
           "422": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/ValidationErrorProblem"
                 }
               }
             },
             "description": "Validation Error"
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            },
+            "description": "Internal Server Error"
           }
         },
         "summary": "Get the default plugin variant",
